--- a/Views/Sales.xaml
+++ b/Views/Sales.xaml
@@ -92,7 +92,7 @@
             </Grid.ColumnDefinitions>
 
             <Label Grid.Column="0">Pris</Label>
-            <TextBox Grid.Column="1" VerticalAlignment="Center" Text="{Binding SalesFormViewModel.Price, UpdateSourceTrigger=PropertyChanged}" FlowDirection="RightToLeft"/>
+            <TextBox Grid.Column="1" VerticalAlignment="Center" Text="{Binding SalesFormViewModel.Price}" FlowDirection="RightToLeft"/>
         </Grid>
         <Grid Grid.Row="5" Margin="0 10 0 0">
             <Grid.ColumnDefinitions>
