--- a/Views/Sales.xaml
+++ b/Views/Sales.xaml
@@ -92,7 +92,7 @@
             </Grid.ColumnDefinitions>
 
             <Label Grid.Column="0">Pris</Label>
-            <TextBox Grid.Column="1" VerticalAlignment="Center" Text="{Binding SalesFormViewModel.Price}" FlowDirection="RightToLeft"/>
+            <TextBox Grid.Column="1" VerticalAlignment="Center" Text="{Binding SalesFormViewModel.Price, StringFormat=F2}" FlowDirection="RightToLeft"/>
         </Grid>
         <Grid Grid.Row="5" Margin="0 10 0 0">
             <Grid.ColumnDefinitions>
@@ -110,7 +110,7 @@
             </Grid.ColumnDefinitions>
 
             <Label Grid.Column="0">Total</Label>
-            <TextBox Grid.Column="1" VerticalAlignment="Center" Text="{Binding SalesFormViewModel.TotalPrice, Mode=OneWay}" FlowDirection="RightToLeft" IsReadOnly="True" Background="LightGray"/>
+            <TextBox Grid.Column="1" VerticalAlignment="Center" Text="{Binding SalesFormViewModel.TotalPrice, Mode=OneWay, StringFormat=N2}" FlowDirection="RightToLeft" IsReadOnly="True" Background="LightGray"/>
         </Grid>
         <StackPanel Orientation="Horizontal" Margin="0 20 0 0" Grid.Row="7">
             <Button 
